version bump + improve list implementation returned by Iterators#arrayView